force-app/main/default/objects/Institution__c.object
<CustomObject>
    <description>Institutions with Callista code (replicated from Callista Institutions Custom Setting)</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Country_API_Name__c</fullName>
        <description>ISO name for the country</description>
        <formula>TEXT(Institution_Country__r.Country__c)</formula>
        <label>ISO Country API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Code__c</fullName>
        <label>Institution Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to country attribute based on the SACC country supplied by Callista.</description>
        <label>Institution Country</label>
        <referenceTo>Country_Attribute__c</referenceTo>
        <relationshipLabel>Institutions</relationshipLabel>
        <relationshipName>Institutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Institution_Name__c</fullName>
        <label>Institution Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Institution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Institution_Code__c</columns>
        <columns>Institution_Name__c</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Created_Recently</fullName>
        <columns>NAME</columns>
        <columns>Institution_Code__c</columns>
        <columns>Institution_Name__c</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>Type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Created Recently</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Institution</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Institutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>